--- a/kanban_assets/kanban_css/generalKanban.css
+++ b/kanban_assets/kanban_css/generalKanban.css
@@ -206,6 +206,17 @@ body{
     margin-right: 10px;
 }
 
+.create-btn-mobile {
+    cursor: pointer;
+    background-color: #95bcff;
+    color: white;
+    padding: 10px 15px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    margin-left: 10px;
+    margin-right: 10px; 
+}
+
 /* .create-btn:hover {
     background-color: blue;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
