fix reseting password

--- a/login_assets/login_css/forgotPassword.css
+++ b/login_assets/login_css/forgotPassword.css
@@ -12,10 +12,9 @@ body {
     display: flex;
 }
 
-
-.logo>img {
+/* .logo>img {
     height: 100px;
-}
+} */
 
 .forgotPassword-container {
     height: 100%;
@@ -47,6 +46,9 @@ body {
     padding: 10px 25px 10px 25px
 }
 
+.email-not-found {
+    color: red;
+}
 
 @media(max-width:540px) {
     .forgotPassword {
