--- a/login_assets/login_css/resetPassword.css
+++ b/login_assets/login_css/resetPassword.css
@@ -47,6 +47,18 @@ body {
     margin-top: 5px;
 }
 
+.min-length-password {
+    font-size: 12px;
+    color: red;
+    margin-left: 10px;
+}
+
+.email-not-matching {
+    font-size: 14px;
+    color: red;
+    margin-left: 10px;
+}
+
 @media(max-width:540px) {
     .resetPassword {
         max-width: 80% !important;
